# MarineAcousticSynthesis

./: .gitignore  .pre-commit-config.yaml  README.md  config.template.yaml  config.yaml  pyproject.toml
Generate_sourcefiles/: choosebackgrounds.py  chooseevents.py  fill_folders.ipynb  generate_snippets.ipynb
demo/: debug.py  demo.ipynb  denoise_dataset.py  generate_dataset.py  run_snr_evaluation.py  write_bacpipe_annotations.py
evaluation/: snr.py
uw_sim/: __init__.py  audio_simulator.py  denoise.py  util.py
