[tool.poetry]
name = "uw-sim"
version = "0.1.0"
description = ""
authors = ["Bram Cuyx <bram.cuyx@vliz.be>"]
readme = "README.md"
package-mode = true


[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.21.0, <2.1"
soundfile = ">=0.10.3"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
matplotlib = ">=3.4.0"
plotandfilter = { git = "git@gitlab.vliz.be:research/plotandfilter.git", branch = "main" }
llvmlite = "^0.44.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^26.1.0"}
ipykernel = "^6.29.5"
ipympl = "^0.9.6"
isort = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

