[tool.poetry]
name = "uw-sim"
version = "0.1.0"
description = ""
authors = ["Bram Cuyx <bram.cuyx@vliz.be>"]
readme = "README.md"
package-mode = true


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.21.0, <2.1"
soundfile = ">=0.10.3"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
matplotlib = ">=3.4.0"
plotandfilter = { git = "git@github.com:bramcuyx/plotandfilter.git", branch = "main" }
llvmlite = ">=0.43"
pyyaml = "6.0.3"
noise-reduction = {git = "git@github.com:bramcuyx/noise-reduction.git", branch = "main" }
tqdm = "^4.67.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^26.1.0"}
ipykernel = "^6.29.5"
ipympl = "^0.9.6"
isort = "^8.0.0"
pydocstyle = "^6.3.0"
pre-commit = "^4.5.1"
nbstripout = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
